--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -15,9 +15,9 @@
 
   <!-- Contenido -->
   <div class="relative z-10 text-center">
-    <h1 class="text-[16vw] md:text-8xl font-bold sombra-exp text-claro">
+    <h2 class="text-[16vw] md:text-8xl font-bold sombra-exp text-claro">
       Experiencia
-    </h1>
+    </h2>
   </div>
 
   <div class="timeline">
@@ -114,6 +114,6 @@
     </div>
   </div>
   <div
-    class="bg-linear-to-t from-oscuro to-transparent w-full relative h-10"
+    class="bg-linear-to-t from-azulOscuro1 to-transparent w-full relative h-10"
   ></div>
 </section>
