--- a/src/app/components/pruebas/pruebas.component.html
+++ b/src/app/components/pruebas/pruebas.component.html
@@ -1,279 +1,124 @@
-<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-<div class="bg-green-400 w-full min-h-100 h-[1000px] -z-0 relative">
-  <!-- ---- -->
-
-  <div class="relative w-[60vw] max-w-[1000px] m-auto">
-    <!-- FJ -->
-    <div
-      class="card card-fj"
-      [class.activo]="estadofj() === 'activar'"
-      [class.desplazar]="estadofj() === 'desplazar'"
-      [class.salir]="estadofj() === 'salir'"
-      (click)="activado('fj')"
+<footer class="bg-azulOscuro1 text-claro py-10">
+  <div class="flex justify-center gap-8">
+    <!-- Email -->
+    <button
+      (click)="copiarEmail()"
+      class="group w-14 h-14 flex items-center justify-center rounded-full bg-claro hover:bg-[#EA4335] transition-colors duration-300 relative"
+      aria-label="Email"
+      title="Copiar Email"
     >
-      <!-- Logo Titulo -->
-      <div class="logotitulo flex flex-col items-center gap-4 p-5">
-        <div class="">
-          <img
-            src="images/proyectos/fj-logo.svg"
-            alt="fj-logo"
-            class="object-cover w-30 m-auto"
-          />
-        </div>
-        <div class="">
-          <h3 class="text-center">FJ</h3>
-        </div>
-      </div>
-
-      <!-- Contenido -->
-      <div
-        class="card-content p-5 pt-0 flex flex-col md:flex-row items-center justify-between gap-8 shadow-lg"
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="currentColor"
+        viewBox="0 0 24 24"
+        class="w-7 h-7 text-oscuro group-hover:text-white transition-colors duration-300"
       >
-        <!-- Texto -->
-        <div class="flex-1">
-          <p>
-            Aplicación web interactiva desarrollada con
-            <strong>Angular 17</strong>
-            para mejorar la velocidad y precisión al escribir. Presenta una
-            interfaz minimalista, intuitiva y enfocada en la enseñanza eficaz de
-            la mecanografía.
-          </p>
-          <br />
+        <path
+          d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 
+             2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 
+             4-8 5-8-5V6l8 5 8-5v2z"
+        />
+      </svg>
 
-          <p>Incluye:</p>
-          <ul>
-            <li>
-              Línea de texto con retroalimentación en tiempo real para mejorar
-              la escritura.
-            </li>
-            <li>
-              Teclado virtual que resalta la tecla que debe pulsarse para guiar
-              al usuario.
-            </li>
-            <li>
-              Guía visual de manos que indica qué dedo utilizar para cada tecla,
-              facilitando el aprendizaje.
-            </li>
-          </ul>
-          <br />
+      @if (copiado) {
+      <span
+        class="absolute -top-10 bg-black text-white text-sm px-3 py-1 rounded-lg animate-fade"
+      >
+        ¡Email copiado!
+      </span>
+      }
+    </button>
 
-          <p>
-            Diseñada para aprender mecanografía de forma intuitiva y efectiva.
-          </p>
-          <br />
-
-          <p>Tecnologías utilizadas:</p>
-          <div class="flex gap-4">
-            <img
-              src="https://cdn.simpleicons.org/angular/000000"
-              title="Angular 17"
-              alt="Angular 17"
-              width="30"
-              height="30"
-            />
-            <img
-              src="https://cdn.simpleicons.org/css/000000"
-              title="CSS"
-              alt="CSS"
-              width="30"
-              height="30"
-            />
-          </div>
-        </div>
-
-        <!-- Imagen app -->
-        <div class="flex-1 flex flex-col items-center gap-4">
-          <img
-            src="images/proyectos/fj-captura.png"
-            alt="Captura app FJ"
-            class="w-full max-w-md rounded-2xl border-[8px] border-black"
-          />
-        </div>
-      </div>
-    </div>
-
-    <!-- Informula -->
-    <div
-      class="card card-informula"
-      [class.activo]="estadoinformula() === 'activar'"
-      [class.desplazar]="estadoinformula() === 'desplazar'"
-      [class.salir]="estadoinformula() === 'salir'"
-      (click)="activado('informula')"
+    <!-- LinkedIn -->
+    <a
+      href="https://www.linkedin.com/in/adri%C3%A1n-ferrad%C3%A1s/"
+      target="_blank"
+      class="group w-14 h-14 flex items-center justify-center rounded-full bg-claro hover:bg-[#0077B5] transition-colors duration-300"
+      aria-label="LinkedIn"
+      title="LinkedIn"
     >
-      <!-- Logo Titulo -->
-      <div class="logotitulo flex flex-col items-center gap-4 p-5">
-        <div class="">
-          <img
-            src="images/proyectos/informula-logo.svg"
-            alt="informula-logo"
-            class="object-cover w-30 m-auto"
-          />
-        </div>
-        <div class="">
-          <h3 class="text-center">Informula</h3>
-        </div>
-      </div>
-      <!-- Contenido -->
-      <div
-        class="card-content p-5 pt-0 flex flex-col md:flex-row items-center justify-between gap-8 shadow-lg"
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="currentColor"
+        viewBox="0 0 448 512"
+        class="w-7 h-7 text-azulOscuro1 group-hover:text-white transition-colors duration-300"
       >
-        <!-- Texto -->
-        <div class="flex-1">
-          <p>
-            Aplicación web desarrollada con <strong>Angular 19</strong> que
-            muestra información actualizada sobre la temporada de Fórmula 1.
-            Presenta una interfaz clara y funcional con los datos más
-            relevantes, obtenidos desde una API externa (no oficial).
-          </p>
-          <br />
+        <path
+          d="M100.28 448H7.4V148.9h92.88zM53.79 108.1
+             C24.09 108.1 0 83.5 0 53.8S24.09 0 
+             53.79 0s53.79 24.09 53.79 53.8
+             -24.09 54.3-53.79 54.3zM447.9 448
+             h-92.68V302.4c0-34.7-.7-79.4-48.4
+             -79.4-48.4 0-55.8 37.8-55.8 
+             76.9V448h-92.7V148.9h89V184h1.3
+             c12.4-23.4 42.6-48.4 87.7-48.4
+             93.8 0 111 61.8 111 142.3V448z"
+        />
+      </svg>
+    </a>
 
-          <p>Incluye:</p>
-          <ul>
-            <li>Contador regresivo en tiempo real para la próxima carrera.</li>
-            <li>Clasificación actual de pilotos y equipos.</li>
-            <li>
-              Diseño moderno con <strong>Tailwind CSS</strong> y
-              <strong>DaisyUI</strong>.
-            </li>
-          </ul>
-          <br />
-          <p>Tecnologías utilizadas:</p>
-          <div class="flex gap-4">
-            <img
-              src="https://cdn.simpleicons.org/angular/000000"
-              title="Angular"
-              alt="Angular"
-              width="30"
-              height="30"
-            />
-            <img
-              src="https://cdn.simpleicons.org/tailwindcss/000000"
-              title="Tailwind CSS / DaisyUI"
-              alt="Tailwind CSS / DaisyUI"
-              width="30"
-              height="30"
-            />
-            <img
-              src="https://cdn.simpleicons.org/css/000000"
-              title="CSS"
-              alt="CSS"
-              width="30"
-              height="30"
-            />
-            <img
-              src="https://cdn.simpleicons.org/typescript/000000"
-              title="TypeScript"
-              alt="TypeScript"
-              width="30"
-              height="30"
-            />
-          </div>
-        </div>
-
-        <!-- Imagen app -->
-        <div class="flex-1 flex flex-col items-center gap-4">
-          <img
-            src="images/proyectos/fj-captura.png"
-            alt="Captura app Informula"
-            class="w-full max-w-md rounded-2xl border-[8px] border-black"
-          />
-        </div>
-      </div>
-    </div>
-
-    <!-- Gesclub -->
-    <div
-      class="card card-gesclub"
-      [class.activo]="estadogesclub() === 'activar'"
-      [class.desplazar]="estadogesclub() === 'desplazar'"
-      [class.salir]="estadogesclub() === 'salir'"
-      (click)="activado('gesclub')"
+    <!-- GitHub -->
+    <a
+      href="https://github.com/Bululi22"
+      target="_blank"
+      class="group w-14 h-14 flex items-center justify-center rounded-full bg-claro hover:bg-black transition-colors duration-300"
+      aria-label="GitHub"
+      title="GitHub"
     >
-      <div class="logotitulo flex flex-col items-center gap-4 p-5">
-        <div class="">
-          <img
-            src="images/proyectos/gesclub-logo.svg"
-            alt="gesclub-logo"
-            class="object-cover w-30 m-auto"
-          />
-        </div>
-        <div class="">
-          <h3 class="text-center">Gesclub</h3>
-        </div>
-      </div>
-      <!-- Contenido -->
-      <div
-        class="card-content p-5 pt-0 flex flex-col md:flex-row items-center justify-between gap-8 shadow-lg"
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="currentColor"
+        viewBox="0 0 24 24"
+        class="w-7 h-7 text-azulOscuro1 group-hover:text-white transition-colors duration-300"
       >
-        <!-- Texto -->
-        <div class="flex-1">
-          <p>
-            Aplicación web desarrollada con <strong>Angular 19</strong> que
-            facilita la gestión de socios en un club deportivo. Presenta una
-            interfaz intuitiva y eficiente que permite añadir, eliminar y
-            modificar.
-          </p>
-          <br />
-
-          <p>Incluye:</p>
-          <ul>
-            <li>Gestión completa de socios con perfiles personalizados.</li>
-            <li>
-              Calendario de eventos y actividades con notificaciones
-              automáticas.
-            </li>
-            <li>
-              Diseño moderno con <strong>Tailwind CSS</strong> y
-              <strong>DaisyUI</strong>.
-            </li>
-          </ul>
-          <br />
-          <p>Tecnologías utilizadas:</p>
-          <div class="flex gap-4">
-            <img
-              src="https://cdn.simpleicons.org/angular/000000"
-              title="Angular 19"
-              alt="Angular 19"
-              width="30"
-              height="30"
-            />
-            <img
-              src="https://cdn.simpleicons.org/mongodb/000000"
-              title="MongoDB"
-              alt="MongoDB"
-              width="30"
-              height="30"
-            />
-            <img
-              src="https://cdn.simpleicons.org/tailwindcss/000000"
-              title="Tailwind CSS / DaisyUI"
-              alt="Tailwind CSS / DaisyUI"
-              width="30"
-              height="30"
-            />
-            <img
-              src="https://cdn.simpleicons.org/typescript/000000"
-              title="TypeScript"
-              alt="TypeScript"
-              width="30"
-              height="30"
-            />
-          </div>
-        </div>
-
-        <!-- Imagen app -->
-        <div class="flex-1 flex flex-col items-center gap-4">
-          <img
-            src="images/proyectos/fj-captura.png"
-            alt="Captura app Gesclub"
-            class="w-full max-w-md rounded-2xl border-[8px] border-black"
-          />
-        </div>
-      </div>
-    </div>
-
-    <!-- ---- -->
+        <path
+          d="M12 .297c-6.63 0-12 5.373-12 12 
+             0 5.303 3.438 9.8 8.205 11.387
+             .6.113.82-.258.82-.577 
+             0-.285-.01-1.04-.015-2.04
+             -3.338.724-4.042-1.61-4.042
+             -1.61-.546-1.387-1.333-1.757
+             -1.333-1.757-1.089-.745.084
+             -.729.084-.729 1.205.084 1.838
+             1.236 1.838 1.236 1.07 1.835 
+             2.809 1.305 3.495.998.108-.775
+             .418-1.305.76-1.605-2.665-.3
+             -5.466-1.335-5.466-5.93 
+             0-1.31.47-2.38 1.236-3.22
+             -.123-.303-.535-1.523.117
+             -3.176 0 0 1.008-.322 3.301
+             1.23a11.5 11.5 0 0 1 3.003
+             -.404c1.02.005 2.045.138 3.003
+             .404 2.291-1.553 3.297-1.23 
+             3.297-1.23.653 1.653.241 
+             2.873.118 3.176.77.84 
+             1.234 1.91 1.234 3.22 
+             0 4.61-2.807 5.625-5.479
+             5.921.43.371.823 1.102.823 
+             2.222 0 1.604-.015 2.896
+             -.015 3.293 0 .321.216.694
+             .825.576C20.565 22.092 24 
+             17.592 24 12.297 24 5.67 
+             18.627.297 12 .297z"
+        />
+      </svg>
+    </a>
+    <!-- Icono Descargar CV -->
+    <a
+      href="cv/adrian-ferradas-cv.pdf"
+      download="Adrian-Ferradas-CV.pdf"
+      aria-label="Descargar CV"
+      class="group w-14 h-14 flex items-center justify-center rounded-full bg-claro hover:bg-green-500 transition-colors duration-300"
+      title="Descargar CV"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="currentColor"
+        viewBox="0 0 24 24"
+        class="w-7 h-7 text-oscuro group-hover:text-white transition-colors duration-300"
+      >
+        <path d="M5 20h14v-2H5v2zm7-18L5.33 9h3.67v4h6V9h3.67L12 2z" />
+      </svg>
+    </a>
   </div>
-  <div class="border-3 border-red-500 w-[30px] h-20 bg-blue-300 m-auto"></div>
-  <p class="text-center">|</p>
-</div>
+</footer>
