--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,21 +1,7 @@
-<section
-  class="relative h-auto w-full bg-radial from-[#eacb46] to-[#ffb74c] z-0"
->
-  <!-- Cuadraditos -->
-  <img
-    src="images/cuadraditos.svg"
-    alt="cuadraditos decorativos"
-    class="absolute top-0 left-0 w-80 -z-10 pointer-events-none opacity-75"
-  />
-  <img
-    src="images/cuadraditos.svg"
-    alt="cuadraditos decorativos"
-    class="absolute bottom-0 right-0 w-80 -z-10 rotate-180 pointer-events-none opacity-75"
-  />
-
+<section class="relative h-auto w-full z-0">
   <!-- Contenido -->
   <div class="relative z-10 text-center">
-    <h2 class="text-[16vw] md:text-8xl font-bold sombra-exp text-claro">
+    <h2 class="text-[16vw] md:text-7xl font-bold sombra-exp text-claro">
       Experiencia
     </h2>
   </div>
@@ -23,9 +9,9 @@
   <div class="timeline">
     <div class="container left">
       <div
-        class="w-[100%] h-auto h-min-10 bg-claro border-3 border-oscuro sombra-box-exp content z-10"
+        class="w-[100%] h-auto bg-claro border-3 border-oscuro sombra-box-exp content z-10"
       >
-        <div class="w-full h-auto py-1 bg-amarillo flex">
+        <div class="w-full h-auto py-1 bg-verde flex">
           <div
             class="w-14 h-14 rounded-full overflow-hidden bg-claro m-2 mx-5 border-1"
           >
@@ -53,9 +39,9 @@
     <!-- Orvium -->
     <div class="container right">
       <div
-        class="w-[100%] h-auto h-min-10 bg-claro border-3 border-oscuro sombra-box-exp content z-10"
+        class="w-[100%] h-auto bg-claro border-3 border-oscuro sombra-box-exp content z-10"
       >
-        <div class="w-full h-auto py-1 bg-amarillo flex">
+        <div class="w-full h-auto py-1 bg-verde flex">
           <div
             class="w-14 h-14 rounded-full overflow-hidden bg-claro m-2 mx-5 border-1"
           >
@@ -83,9 +69,9 @@
     <!-- Gven -->
     <div class="container left">
       <div
-        class="w-[100%] h-auto h-min-10 bg-claro border-3 border-oscuro sombra-box-exp content z-10"
+        class="w-[100%] h-auto bg-claro border-3 border-oscuro sombra-box-exp content z-10"
       >
-        <div class="w-full h-auto py-1 bg-amarillo flex">
+        <div class="w-full h-auto py-1 bg-verde flex">
           <div
             class="w-14 h-14 rounded-full overflow-hidden bg-claro m-2 mx-5 border-1"
           >
@@ -113,7 +99,4 @@
       </div>
     </div>
   </div>
-  <div
-    class="bg-linear-to-t from-azulOscuro1 to-transparent w-full relative h-10"
-  ></div>
 </section>
