--- a/src/app/components/proyectos/proyectos-info/proyectos-info.component.html
+++ b/src/app/components/proyectos/proyectos-info/proyectos-info.component.html
@@ -1,9 +1,9 @@
 <!-- FJ -->
 @if (proyecto == 'fj') {
 <!-- Texto -->
-<div class="flex-[1.5] h-full mx-2 min-h-[400px] flex flex-col justify-between">
+<div class="flex-[1.5] mx-2 flex flex-col justify-between p-5">
   <div>
-    <h3 class="text-center text-4xl text-claro font-bold">FJ</h3>
+    <h3 class="text-center text-4xl font-bold">FJ</h3>
     <br />
 
     <p>
@@ -13,7 +13,10 @@
       minimalista, intuitiva y enfocada en la enseñanza eficaz de la
       mecanografía.
     </p>
+
     <br />
+
+    <!-- <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /> -->
 
     <p>Incluye:</p>
     <ul>
@@ -56,21 +59,21 @@
       </div>
     </div>
     <div>
+      <!-- Botón GitHub -->
       <a
         href="https://github.com/Bululi22/FJ"
         target="_blank"
-        class="bg-[#ffffff17] text-claro p-2 rounded-full shadow hover:scale-110 transition duration-300 inline-flex items-center justify-center"
-        title="GitHub"
+        aria-label="GitHub Repositorio FJ"
+        class="group inline-flex items-center justify-center w-12 h-12 rounded-full bg-oscuro hover:bg-[#dbdbdb] transition duration-300 hover:scale-110"
+        title="GitHub Repositorio FJ"
       >
         <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="currentColor"
           viewBox="0 0 24 24"
-          width="40"
-          height="40"
+          fill="currentColor"
+          class="w-6 h-6 text-claro group-hover:text-oscuro transition-colors duration-300"
         >
           <path
-            d="M12 0C5.37 0 0 5.37 0 12a12.01 12.01 0 008.21 11.41c.6.11.82-.26.82-.58v-2.16c-3.34.73-4.04-1.61-4.04-1.61-.55-1.41-1.35-1.79-1.35-1.79-1.1-.75.08-.74.08-.74 1.21.09 1.84 1.24 1.84 1.24 1.08 1.84 2.84 1.31 3.53 1 .11-.78.42-1.31.76-1.61-2.66-.3-5.47-1.34-5.47-5.96 0-1.31.47-2.38 1.24-3.23-.12-.3-.54-1.52.12-3.16 0 0 1-.32 3.3 1.23a11.5 11.5 0 016 0c2.3-1.55 3.3-1.23 3.3-1.23.66 1.64.24 2.86.12 3.16.77.85 1.24 1.92 1.24 3.23 0 4.63-2.81 5.66-5.49 5.96.43.38.81 1.12.81 2.25v3.34c0 .32.21.7.83.58A12.01 12.01 0 0024 12c0-6.63-5.37-12-12-12z"
+            d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757-1.089-.745.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.775.418-1.305.76-1.605-2.665-.3-5.466-1.335-5.466-5.93 0-1.31.47-2.38 1.236-3.22-.123-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.301 1.23a11.5 11.5 0 0 1 3.003-.404c1.02.005 2.045.138 3.003.404 2.291-1.553 3.297-1.23 3.297-1.23.653 1.653.241 2.873.118 3.176.77.84 1.234 1.91 1.234 3.22 0 4.61-2.807 5.625-5.479 5.921.43.371.823 1.102.823 2.222 0 1.604-.015 2.896-.015 3.293 0 .321.216.694.825.576C20.565 22.092 24 17.592 24 12.297 24 5.67 18.627.297 12 .297z"
           />
         </svg>
       </a>
@@ -79,14 +82,14 @@
 </div>
 
 <!-- Imagen app -->
-<div class="flex-1 flex flex-col items-center gap-4">
+<div class="flex-1 content-center border-l-3 border-oscuro p-5 bg-verde">
   <img
     src="images/proyectos/fj-logo.svg"
     alt="fj-logo"
-    class="w-auto m-auto max-h-[75px] h-auto object-contain"
+    class="w-auto m-auto max-h-[75px] h-auto object-contain mb-5"
   />
   <div
-    class="relative rounded-2xl border-[8px] border-black w-full max-w-md overflow-hidden group"
+    class="relative rounded-2xl border-[8px] border-black w-full max-w-md m-auto overflow-hidden"
   >
     <img
       src="images/proyectos/fj-captura.png"
@@ -100,9 +103,9 @@
 <!-- Informula -->
 @if (proyecto == 'informula') {
 <!-- Texto -->
-<div class="flex-[1.5] h-full mx-2 min-h-[400px] flex flex-col justify-between">
+<div class="flex-[1.5] mx-2 flex flex-col justify-between p-5">
   <div>
-    <h3 class="text-center text-4xl text-claro font-bold">Informula</h3>
+    <h3 class="text-center text-4xl font-bold">Informula</h3>
     <br />
 
     <p>
@@ -126,7 +129,7 @@
   <div class="flex justify-between items-end">
     <div>
       <p>Tecnologías utilizadas:</p>
-      <div class="flex gap-4 iconos mt-2">
+      <div class="flex gap-4 iconos">
         <img
           src="https://cdn.simpleicons.org/angular/DD0031"
           title="Angular 19"
@@ -158,21 +161,21 @@
       </div>
     </div>
     <div>
+      <!-- Botón GitHub -->
       <a
         href="https://github.com/Bululi22/InFormula"
         target="_blank"
-        class="bg-[#ffffff17] text-claro p-2 rounded-full shadow hover:scale-110 transition duration-300 inline-flex items-center justify-center"
-        title="GitHub"
+        aria-label="GitHub Repositorio InFormula"
+        class="group inline-flex items-center justify-center w-12 h-12 rounded-full bg-oscuro hover:bg-[#dbdbdb] transition duration-300 hover:scale-110"
+        title="GitHub Repositorio InFormula"
       >
         <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="currentColor"
           viewBox="0 0 24 24"
-          width="40"
-          height="40"
+          fill="currentColor"
+          class="w-6 h-6 text-claro group-hover:text-oscuro transition-colors duration-300"
         >
           <path
-            d="M12 0C5.37 0 0 5.37 0 12a12.01 12.01 0 008.21 11.41c.6.11.82-.26.82-.58v-2.16c-3.34.73-4.04-1.61-4.04-1.61-.55-1.41-1.35-1.79-1.35-1.79-1.1-.75.08-.74.08-.74 1.21.09 1.84 1.24 1.84 1.24 1.08 1.84 2.84 1.31 3.53 1 .11-.78.42-1.31.76-1.61-2.66-.3-5.47-1.34-5.47-5.96 0-1.31.47-2.38 1.24-3.23-.12-.3-.54-1.52.12-3.16 0 0 1-.32 3.3 1.23a11.5 11.5 0 016 0c2.3-1.55 3.3-1.23 3.3-1.23.66 1.64.24 2.86.12 3.16.77.85 1.24 1.92 1.24 3.23 0 4.63-2.81 5.66-5.49 5.96.43.38.81 1.12.81 2.25v3.34c0 .32.21.7.83.58A12.01 12.01 0 0024 12c0-6.63-5.37-12-12-12z"
+            d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757-1.089-.745.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.775.418-1.305.76-1.605-2.665-.3-5.466-1.335-5.466-5.93 0-1.31.47-2.38 1.236-3.22-.123-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.301 1.23a11.5 11.5 0 0 1 3.003-.404c1.02.005 2.045.138 3.003.404 2.291-1.553 3.297-1.23 3.297-1.23.653 1.653.241 2.873.118 3.176.77.84 1.234 1.91 1.234 3.22 0 4.61-2.807 5.625-5.479 5.921.43.371.823 1.102.823 2.222 0 1.604-.015 2.896-.015 3.293 0 .321.216.694.825.576C20.565 22.092 24 17.592 24 12.297 24 5.67 18.627.297 12 .297z"
           />
         </svg>
       </a>
@@ -181,14 +184,14 @@
 </div>
 
 <!-- Imagen app -->
-<div class="flex-1 flex flex-col items-center gap-4">
+<div class="flex-1 content-center border-l-3 border-oscuro p-5 bg-verde">
   <img
     src="images/proyectos/informula-logo.svg"
     alt="informula-logo"
-    class="w-auto m-auto max-h-[75px] h-auto object-contain"
+    class="w-auto m-auto max-h-[75px] h-auto object-contain mb-5"
   />
   <div
-    class="relative rounded-2xl border-[8px] border-black w-full max-w-md overflow-hidden group"
+    class="relative rounded-2xl border-[8px] border-black w-full max-w-md m-auto overflow-hidden"
   >
     <img
       src="images/proyectos/informula-captura.png"
@@ -203,9 +206,9 @@
 <!-- Gesclub -->
 @if (proyecto == 'gesclub') {
 <!-- Texto -->
-<div class="flex-[1.5] h-full mx-2 min-h-[400px] flex flex-col justify-between">
+<div class="flex-[1.5] mx-2 flex flex-col justify-between p-5">
   <div>
-    <h3 class="text-center text-4xl text-claro font-bold">Gesclub</h3>
+    <h3 class="text-center text-4x font-bold">Gesclub</h3>
     <br />
 
     <p>
@@ -262,21 +265,21 @@
       </div>
     </div>
     <div>
+      <!-- Botón GitHub -->
       <a
-        href="https://github.com/Bululi22/FJ"
+        href="https://github.com/Bululi22/Gesclub"
         target="_blank"
-        class="bg-[#ffffff17] text-claro p-2 rounded-full shadow hover:scale-110 transition duration-300 inline-flex items-center justify-center"
-        title="GitHub"
+        aria-label="GitHub Repositorio Gesclub"
+        class="group inline-flex items-center justify-center w-12 h-12 rounded-full bg-oscuro hover:bg-[#dbdbdb] transition duration-300 hover:scale-110"
+        title="GitHub Repositorio Gesclub"
       >
         <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="currentColor"
           viewBox="0 0 24 24"
-          width="40"
-          height="40"
+          fill="currentColor"
+          class="w-6 h-6 text-claro group-hover:text-oscuro transition-colors duration-300"
         >
           <path
-            d="M12 0C5.37 0 0 5.37 0 12a12.01 12.01 0 008.21 11.41c.6.11.82-.26.82-.58v-2.16c-3.34.73-4.04-1.61-4.04-1.61-.55-1.41-1.35-1.79-1.35-1.79-1.1-.75.08-.74.08-.74 1.21.09 1.84 1.24 1.84 1.24 1.08 1.84 2.84 1.31 3.53 1 .11-.78.42-1.31.76-1.61-2.66-.3-5.47-1.34-5.47-5.96 0-1.31.47-2.38 1.24-3.23-.12-.3-.54-1.52.12-3.16 0 0 1-.32 3.3 1.23a11.5 11.5 0 016 0c2.3-1.55 3.3-1.23 3.3-1.23.66 1.64.24 2.86.12 3.16.77.85 1.24 1.92 1.24 3.23 0 4.63-2.81 5.66-5.49 5.96.43.38.81 1.12.81 2.25v3.34c0 .32.21.7.83.58A12.01 12.01 0 0024 12c0-6.63-5.37-12-12-12z"
+            d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757-1.089-.745.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.775.418-1.305.76-1.605-2.665-.3-5.466-1.335-5.466-5.93 0-1.31.47-2.38 1.236-3.22-.123-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.301 1.23a11.5 11.5 0 0 1 3.003-.404c1.02.005 2.045.138 3.003.404 2.291-1.553 3.297-1.23 3.297-1.23.653 1.653.241 2.873.118 3.176.77.84 1.234 1.91 1.234 3.22 0 4.61-2.807 5.625-5.479 5.921.43.371.823 1.102.823 2.222 0 1.604-.015 2.896-.015 3.293 0 .321.216.694.825.576C20.565 22.092 24 17.592 24 12.297 24 5.67 18.627.297 12 .297z"
           />
         </svg>
       </a>
@@ -285,14 +288,14 @@
 </div>
 
 <!-- Imagen app -->
-<div class="flex-1 flex flex-col items-center gap-4">
+<div class="flex-1 content-center border-l-3 border-oscuro p-5 bg-verde">
   <img
     src="images/proyectos/gesclub-logo.svg"
     alt="gesclub-logo"
-    class="w-auto m-auto max-h-[75px] h-auto object-contain"
+    class="w-auto m-auto max-h-[75px] h-auto object-contain mb-5"
   />
   <div
-    class="relative rounded-2xl border-[8px] border-black w-full max-w-md overflow-hidden group"
+    class="relative rounded-2xl border-[8px] border-black w-full max-w-md m-auto overflow-hidden"
   >
     <!-- Imagen con efecto blur al hacer hover -->
     <img
