--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@
   --color-claro: #ececec;
   --color-oscuro: #1d1d1b;
   --color-amarillo: #ecc846;
+  --color-verde: #69ad87;
   --color-azulOscuro1: #0a1524;
   --color-azulClaro: #8bacd9;
 }
