--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-header />
-<app-experiencia />
-<app-proyectos />
+<div class="relative fondo">
+  <!-- Nubes -->
+  <app-header-nubes />
+  <app-experiencia />
+  <app-proyectos />
+</div>
 <app-footer />
-<app-pruebon />
