--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,19 +1,12 @@
 <header
-  class="relative h-screen w-full bg-[#81e1ff] flex flex-col items-center justify-center text-center -z-0"
+  class="relative h-screen w-full flex flex-col items-center justify-center text-center -z-0"
 >
-  <!-- Nubes -->
-  <app-header-nubes />
-
   <div class="place-items-center animate-fade-down">
     <!-- Texto -->
     <img src="images/afg.svg" alt="logo-header" class="w-60 select-none" />
-    <h1 class="text-6xl font-bold">Adrián Ferradás Gutiérrez</h1>
+    <h1 class="text-6xl font-bold text-claro">Adrián Ferradás Gutiérrez</h1>
 
-    <h3
-      class="text-4xl font-bold text-[radial-gradient(circle_at_top,_#eacb46,_#ffb74c)]"
-    >
-      Desarrollador Web
-    </h3>
+    <h3 class="text-4xl font-bold text-claro">Desarrollador Web</h3>
     <div class="flex gap-4">
       <!-- Email -->
       <button
