--- a/src/app/components/header/header-nubes/header-nubes.component.html
+++ b/src/app/components/header/header-nubes/header-nubes.component.html
@@ -1,6 +1,6 @@
 <!-- Nubes -->
 <div
-  class="absolute top-0 left-0 w-full h-[110vh] overflow-hidden pointer-events-none -z-10"
+  class="absolute top-0 left-0 w-full h-400 overflow-hidden pointer-events-none z-0"
 >
   <img
     src="images/nube.png"
