--- a/src/app/components/proyectos/proyectos.component.css
+++ b/src/app/components/proyectos/proyectos.component.css
@@ -1,10 +1,3 @@
-.fondo {
-  /* background-image: url("/images/fondoAzul.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; */
-  background-color: #81e1ff;
-}
 h2 {
   text-align: center;
   text-shadow: 0 17px 20px rgb(28 50 81);
@@ -16,3 +9,9 @@ h2 {
 .sombra-box-exp {
   box-shadow: -4px 4px #1d1d1b;
 }
+/* .fondo {
+  background: url("/images/fondoSuelo.svg") no-repeat bottom center, #81e1ff;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom center;
+} */
