--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -6,13 +6,18 @@
     </h2>
   </div>
   <!-- --- -->
-  @for (proyecto of proyectos; track proyecto) {
+  @for (proyecto of proyectos; track proyecto; let i = $index ) {
   <div
     class="w-[90vw] max-w-[1500px] gap-8 m-auto my-10 text-oscuro sombra-box-exp bg-claro border-3 border-oscuro"
   >
     <app-proyectos-info
       [proyecto]="proyecto"
       class="flex flex-col-reverse gap-3 md:flex-row justify-between"
+      [ngClass]="
+        esPar(i)
+          ? 'flex flex-col-reverse gap-3 md:flex-row-reverse justify-between'
+          : 'flex flex-col-reverse gap-3 md:flex-row justify-between'
+      "
     />
   </div>
   }
