--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -11,7 +11,7 @@
       <div
         class="w-[100%] h-auto bg-claro border-3 border-oscuro sombra-box-exp content z-10"
       >
-        <div class="w-full h-auto py-1 bg-verde flex">
+        <div class="w-full h-auto py-1 bg-carta flex">
           <div
             class="w-14 h-14 rounded-full overflow-hidden bg-claro m-2 mx-5 border-1"
           >
@@ -41,7 +41,7 @@
       <div
         class="w-[100%] h-auto bg-claro border-3 border-oscuro sombra-box-exp content z-10"
       >
-        <div class="w-full h-auto py-1 bg-verde flex">
+        <div class="w-full h-auto py-1 bg-carta flex">
           <div
             class="w-14 h-14 rounded-full overflow-hidden bg-claro m-2 mx-5 border-1"
           >
@@ -71,7 +71,7 @@
       <div
         class="w-[100%] h-auto bg-claro border-3 border-oscuro sombra-box-exp content z-10"
       >
-        <div class="w-full h-auto py-1 bg-verde flex">
+        <div class="w-full h-auto py-1 bg-carta flex">
           <div
             class="w-14 h-14 rounded-full overflow-hidden bg-claro m-2 mx-5 border-1"
           >
