--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,8 @@
   --color-oscuro: #1d1d1b;
   --color-amarillo: #ecc846;
   --color-verde: #69ad87;
-  --color-azulOscuro1: #0a1524;
+  --color-carta: #62b1b1;
+  --color-azulOscuro: #0a1524;
   --color-azulClaro: #8bacd9;
 }
 
