--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="bg-azulOscuro1 text-claro py-10">
-  <div class="flex justify-center gap-8">
+<footer class="bg-oscuro text-claro py-10">
+  <div class="flex justify-center gap-5">
     <!-- Email -->
     <button
       (click)="copiarEmail()"
@@ -14,15 +14,13 @@
         class="w-7 h-7 text-oscuro group-hover:text-white transition-colors duration-300"
       >
         <path
-          d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 
-             2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 
-             4-8 5-8-5V6l8 5 8-5v2z"
+          d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"
         />
       </svg>
 
       @if (copiado) {
       <span
-        class="absolute -top-10 bg-black text-white text-sm px-3 py-1 rounded-lg animate-fade"
+        class="absolute -top-10 bg-oscuro text-white text-sm px-3 py-1 rounded-lg animate-fade"
       >
         ¡Email copiado!
       </span>
@@ -41,18 +39,10 @@
         xmlns="http://www.w3.org/2000/svg"
         fill="currentColor"
         viewBox="0 0 448 512"
-        class="w-7 h-7 text-azulOscuro1 group-hover:text-white transition-colors duration-300"
+        class="w-7 h-7 text-oscuro group-hover:text-white transition-colors duration-300"
       >
         <path
-          d="M100.28 448H7.4V148.9h92.88zM53.79 108.1
-             C24.09 108.1 0 83.5 0 53.8S24.09 0 
-             53.79 0s53.79 24.09 53.79 53.8
-             -24.09 54.3-53.79 54.3zM447.9 448
-             h-92.68V302.4c0-34.7-.7-79.4-48.4
-             -79.4-48.4 0-55.8 37.8-55.8 
-             76.9V448h-92.7V148.9h89V184h1.3
-             c12.4-23.4 42.6-48.4 87.7-48.4
-             93.8 0 111 61.8 111 142.3V448z"
+          d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8S24.09 0 53.79 0s53.79 24.09 53.79 53.8-24.09 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.4-48.4-79.4-48.4 0-55.8 37.8-55.8 76.9V448h-92.7V148.9h89V184h1.3c12.4-23.4 42.6-48.4 87.7-48.4 93.8 0 111 61.8 111 142.3V448z"
         />
       </svg>
     </a>
@@ -61,7 +51,7 @@
     <a
       href="https://github.com/Bululi22"
       target="_blank"
-      class="group w-14 h-14 flex items-center justify-center rounded-full bg-claro hover:bg-black transition-colors duration-300"
+      class="group w-14 h-14 flex items-center justify-center rounded-full bg-claro hover:bg-oscuro transition-colors duration-300"
       aria-label="GitHub"
       title="GitHub"
     >
@@ -69,37 +59,10 @@
         xmlns="http://www.w3.org/2000/svg"
         fill="currentColor"
         viewBox="0 0 24 24"
-        class="w-7 h-7 text-azulOscuro1 group-hover:text-white transition-colors duration-300"
+        class="w-7 h-7 text-oscuro group-hover:text-white transition-colors duration-300"
       >
         <path
-          d="M12 .297c-6.63 0-12 5.373-12 12 
-             0 5.303 3.438 9.8 8.205 11.387
-             .6.113.82-.258.82-.577 
-             0-.285-.01-1.04-.015-2.04
-             -3.338.724-4.042-1.61-4.042
-             -1.61-.546-1.387-1.333-1.757
-             -1.333-1.757-1.089-.745.084
-             -.729.084-.729 1.205.084 1.838
-             1.236 1.838 1.236 1.07 1.835 
-             2.809 1.305 3.495.998.108-.775
-             .418-1.305.76-1.605-2.665-.3
-             -5.466-1.335-5.466-5.93 
-             0-1.31.47-2.38 1.236-3.22
-             -.123-.303-.535-1.523.117
-             -3.176 0 0 1.008-.322 3.301
-             1.23a11.5 11.5 0 0 1 3.003
-             -.404c1.02.005 2.045.138 3.003
-             .404 2.291-1.553 3.297-1.23 
-             3.297-1.23.653 1.653.241 
-             2.873.118 3.176.77.84 
-             1.234 1.91 1.234 3.22 
-             0 4.61-2.807 5.625-5.479
-             5.921.43.371.823 1.102.823 
-             2.222 0 1.604-.015 2.896
-             -.015 3.293 0 .321.216.694
-             .825.576C20.565 22.092 24 
-             17.592 24 12.297 24 5.67 
-             18.627.297 12 .297z"
+          d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757-1.089-.745.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.775.418-1.305.76-1.605-2.665-.3-5.466-1.335-5.466-5.93 0-1.31.47-2.38 1.236-3.22-.123-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.301 1.23a11.5 11.5 0 0 1 3.003-.404c1.02.005 2.045.138 3.003.404 2.291-1.553 3.297-1.23 3.297-1.23.653 1.653.241 2.873.118 3.176.77.84 1.234 1.91 1.234 3.22 0 4.61-2.807 5.625-5.479 5.921.43.371.823 1.102.823 2.222 0 1.604-.015 2.896-.015 3.293 0 .321.216.694.825.576C20.565 22.092 24 17.592 24 12.297 24 5.67 18.627.297 12 .297z"
         />
       </svg>
     </a>
