--- a/src/app/components/header/header-nubes/header-nubes.component.html
+++ b/src/app/components/header/header-nubes/header-nubes.component.html
@@ -1,32 +1,16 @@
 <!-- Nubes -->
 <div
-  class="absolute top-0 left-0 w-full h-400 overflow-hidden pointer-events-none z-0"
+  class="absolute top-[100px] left-0 w-full flex overflow-hidden pointer-events-none z-0"
 >
   <img
-    src="images/nube.png"
-    alt="nube-fondo1"
-    class="rotate-280 animate-nube absolute top-[-30%] w-140"
-    style="animation-delay: -12s"
+    src="images/nubes.svg"
+    alt="nubes"
+    class="animate-nubes absolute top-0 left-0"
   />
-
   <img
-    src="images/nube.png"
-    alt="nube-fondo2"
-    class="rotate-280 animate-nube absolute top-[3%] w-120"
-    style="animation-delay: -4s"
-  />
-
-  <img
-    src="images/nube.png"
-    alt="nube-fondo3"
-    class="rotate-280 animate-nube absolute bottom-[5%] w-120"
-    style="animation-delay: -8s"
-  />
-
-  <img
-    src="images/nube.png"
-    alt="nube-fondo4"
-    class="rotate-280 animate-nube absolute bottom-[-30%] w-200"
-    style="animation-delay: -14s"
+    src="images/nubes.svg"
+    alt="nubes"
+    class="animate-nubes absolute top-0 left-0"
+    style="animation-delay: -50s"
   />
 </div>
