--- a/src/app/components/proyectos/proyectos-info/proyectos-info.component.html
+++ b/src/app/components/proyectos/proyectos-info/proyectos-info.component.html
@@ -19,7 +19,7 @@
     <!-- <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /> -->
 
     <p>Incluye:</p>
-    <ul>
+    <ul class="list-inside list-disc">
       <li>
         Línea de texto con retroalimentación en tiempo real para mejorar la
         escritura.
@@ -56,6 +56,13 @@
           width="30"
           height="30"
         />
+        <img
+          src="https://cdn.simpleicons.org/typescript/3178C6"
+          title="TypeScript"
+          alt="TypeScript"
+          width="30"
+          height="30"
+        />
       </div>
     </div>
     <div>
@@ -64,7 +71,7 @@
         href="https://github.com/Bululi22/FJ"
         target="_blank"
         aria-label="GitHub Repositorio FJ"
-        class="group inline-flex items-center justify-center w-12 h-12 rounded-full bg-oscuro hover:bg-[#dbdbdb] transition duration-300 hover:scale-110"
+        class="group inline-flex items-center justify-center w-12 h-12 rounded-full bg-oscuro hover:bg-carta transition duration-300 hover:scale-110"
         title="GitHub Repositorio FJ"
       >
         <svg
@@ -82,7 +89,7 @@
 </div>
 
 <!-- Imagen app -->
-<div class="flex-1 content-center border-l-3 border-oscuro p-5 bg-verde">
+<div class="flex-1 content-center border-l-3 border-oscuro p-5 bg-carta">
   <img
     src="images/proyectos/fj-logo.svg"
     alt="fj-logo"
@@ -117,7 +124,7 @@
     <br />
 
     <p>Incluye:</p>
-    <ul>
+    <ul class="list-inside list-disc">
       <li>Contador regresivo en tiempo real para la próxima carrera.</li>
       <li>Clasificación actual de pilotos y equipos.</li>
       <li>
@@ -166,7 +173,7 @@
         href="https://github.com/Bululi22/InFormula"
         target="_blank"
         aria-label="GitHub Repositorio InFormula"
-        class="group inline-flex items-center justify-center w-12 h-12 rounded-full bg-oscuro hover:bg-[#dbdbdb] transition duration-300 hover:scale-110"
+        class="group inline-flex items-center justify-center w-12 h-12 rounded-full bg-oscuro hover:bg-carta transition duration-300 hover:scale-110"
         title="GitHub Repositorio InFormula"
       >
         <svg
@@ -184,7 +191,7 @@
 </div>
 
 <!-- Imagen app -->
-<div class="flex-1 content-center border-l-3 border-oscuro p-5 bg-verde">
+<div class="flex-1 content-center border-l-3 border-oscuro p-5 bg-carta">
   <img
     src="images/proyectos/informula-logo.svg"
     alt="informula-logo"
@@ -208,7 +215,7 @@
 <!-- Texto -->
 <div class="flex-[1.5] mx-2 flex flex-col justify-between p-5">
   <div>
-    <h3 class="text-center text-4x font-bold">Gesclub</h3>
+    <h3 class="text-center text-4xl font-bold">Gesclub</h3>
     <br />
 
     <p>
@@ -219,7 +226,7 @@
     <br />
 
     <p>Incluye:</p>
-    <ul>
+    <ul class="list-inside list-disc">
       <li>Gestión completa de socios con perfiles personalizados.</li>
       <li>
         Calendario de eventos y actividades con notificaciones automáticas.
@@ -270,7 +277,7 @@
         href="https://github.com/Bululi22/Gesclub"
         target="_blank"
         aria-label="GitHub Repositorio Gesclub"
-        class="group inline-flex items-center justify-center w-12 h-12 rounded-full bg-oscuro hover:bg-[#dbdbdb] transition duration-300 hover:scale-110"
+        class="group inline-flex items-center justify-center w-12 h-12 rounded-full bg-oscuro hover:bg-carta transition duration-300 hover:scale-110"
         title="GitHub Repositorio Gesclub"
       >
         <svg
@@ -288,7 +295,7 @@
 </div>
 
 <!-- Imagen app -->
-<div class="flex-1 content-center border-l-3 border-oscuro p-5 bg-verde">
+<div class="flex-1 content-center border-l-3 border-oscuro p-5 bg-carta">
   <img
     src="images/proyectos/gesclub-logo.svg"
     alt="gesclub-logo"
