--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,7 @@
   <app-header-nubes />
   <app-experiencia />
   <app-proyectos />
+  <img src="images/fondoSuelo.svg" alt="suelo" />
 </div>
+
 <app-footer />
