--- a/src/app/components/proyectos/proyectos-info/proyectos-info.component.html
+++ b/src/app/components/proyectos/proyectos-info/proyectos-info.component.html
@@ -97,7 +97,7 @@
     class="relative rounded-2xl border-[8px] border-black w-full max-w-md m-auto overflow-hidden"
   >
     <img
-      src="images/proyectos/fj-captura.png"
+      src="images/proyectos/fj-captura.webp"
       alt="Captura app fj"
       class="w-full"
     />
@@ -199,7 +199,7 @@
     class="relative rounded-2xl border-[8px] border-black w-full max-w-md m-auto overflow-hidden"
   >
     <img
-      src="images/proyectos/informula-captura.png"
+      src="images/proyectos/informula-captura.webp"
       alt="Captura app informula"
       class="w-full"
     />
@@ -303,7 +303,7 @@
     class="relative rounded-2xl border-[8px] border-black w-full max-w-md m-auto overflow-hidden"
   >
     <img
-      src="images/proyectos/gesclub-captura.png"
+      src="images/proyectos/gesclub-captura.webp"
       alt="Captura app gesclub"
       class="w-full"
     />
