--- a/src/app/components/header/header-nubes/header-nubes.component.html
+++ b/src/app/components/header/header-nubes/header-nubes.component.html
@@ -1,6 +1,6 @@
 <!-- Nubes -->
 <div
-  class="absolute top-[100px] left-0 w-full flex overflow-hidden pointer-events-none z-0"
+  class="absolute top-[250px] left-0 w-full h-full flex overflow-hidden pointer-events-none z-0"
 >
   <img
     src="images/nubes.svg"
