--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,48 @@
 <header
-  class="relative h-screen w-full flex flex-col items-center justify-center text-center -z-0"
+  class="relative min-h-[100svh] w-full flex flex-col items-center justify-center text-center -z-0"
 >
+  <!-- Estrellas especiales -->
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    class="absolute min-h-[100svh] w-full"
+  >
+    <!-- Forma estrella -->
+    <defs>
+      <path
+        id="estrella"
+        d="M0,-3 C0.45,-0.9, 2.4,-0.45, 3,0 C2.4,0.45, 0.45,0.9, 0,3 C-0.45,0.9, -2.4,0.45, -3,0 C-2.4,-0.45, -0.45,-0.9, 0,-3 Z"
+        fill="white"
+      />
+    </defs>
+
+    <!-- Colocación estrellas -->
+    <use href="#estrella" x="12%" y="73%" class="star" />
+    <use href="#estrella" x="88%" y="19%" class="star" />
+    <use href="#estrella" x="33%" y="91%" class="star" />
+    <use href="#estrella" x="76%" y="42%" class="star" />
+    <use href="#estrella" x="25%" y="43%" class="star" />
+    <use href="#estrella" x="38%" y="29%" class="star" />
+    <use href="#estrella" x="60%" y="14%" class="star" />
+    <use href="#estrella" x="47%" y="85%" class="star" />
+    <use href="#estrella" x="93%" y="35%" class="star" />
+    <use href="#estrella" x="18%" y="10%" class="star" />
+    <use href="#estrella" x="67%" y="67%" class="star" />
+    <use href="#estrella" x="10%" y="22%" class="star" />
+    <use href="#estrella" x="85%" y="77%" class="star" />
+    <use href="#estrella" x="42%" y="18%" class="star" />
+    <use href="#estrella" x="58%" y="63%" class="star" />
+    <use href="#estrella" x="27%" y="35%" class="star" />
+    <use href="#estrella" x="70%" y="50%" class="star" />
+    <use href="#estrella" x="15%" y="88%" class="star" />
+    <use href="#estrella" x="90%" y="12%" class="star" />
+    <use href="#estrella" x="33%" y="60%" class="star" />
+    <use href="#estrella" x="77%" y="28%" class="star" />
+    <use href="#estrella" x="20%" y="45%" class="star" />
+    <use href="#estrella" x="65%" y="80%" class="star" />
+    <use href="#estrella" x="48%" y="33%" class="star" />
+    <use href="#estrella" x="95%" y="55%" class="star" />
+  </svg>
+
   <div class="place-items-center animate-fade-down">
     <!-- Texto -->
     <img src="images/afg.svg" alt="logo-header" class="w-60 select-none" />
