--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -9,7 +9,7 @@
   <div class="timeline">
     <div class="container left">
       <div
-        class="w-[100%] h-auto bg-claro border-3 border-oscuro sombra-box-exp content z-10"
+        class="w-[100%] h-auto bg-claro border-3 border-oscuro sombra-box-exp content z-10 rounded-xl overflow-hidden"
       >
         <div class="w-full h-auto py-1 bg-carta flex">
           <div
@@ -28,18 +28,18 @@
         </div>
         <hr class="h-[3px] bg-oscuro border-oscuro" />
         <p class="p-2">
-          Durante mi periodo en Jostari, gestioné la resolución de incidencias
-          técnicas, optimicé los procesos de pedidos y devoluciones a través de
-          la plataforma <b>WordPress</b> y elaboré materiales gráficos
-          utilizando <b>Illustrator</b>, contribuyendo a mejorar la comunicación
-          visual y la eficiencia operativa del sitio.
+          Durante mi periodo en Jostari, gestioné incidencias técnicas y
+          optimicé pedidos y devoluciones desde <b>WordPress</b>.
+          <br /><br />Trabajé con la configuración de plugins y edición en
+          <b>PHP</b> para adaptar funcionalidades. <br /><br />También diseñé
+          materiales gráficos con <b>Illustrator</b>, mejorando la parte visual.
         </p>
       </div>
     </div>
     <!-- Orvium -->
     <div class="container right">
       <div
-        class="w-[100%] h-auto bg-claro border-3 border-oscuro sombra-box-exp content z-10"
+        class="w-[100%] h-auto bg-claro border-3 border-oscuro sombra-box-exp content z-10 rounded-xl overflow-hidden"
       >
         <div class="w-full h-auto py-1 bg-carta flex">
           <div
@@ -69,7 +69,7 @@
     <!-- Gven -->
     <div class="container left">
       <div
-        class="w-[100%] h-auto bg-claro border-3 border-oscuro sombra-box-exp content z-10"
+        class="w-[100%] h-auto bg-claro border-3 border-oscuro sombra-box-exp content z-10 rounded-xl overflow-hidden"
       >
         <div class="w-full h-auto py-1 bg-carta flex">
           <div
