--- a/src/app/components/proyectos/proyectos-info/proyectos-info.component.html
+++ b/src/app/components/proyectos/proyectos-info/proyectos-info.component.html
@@ -2,7 +2,7 @@
 @if (proyecto == 'fj') {
 <!-- Texto -->
 <div class="flex-[1.5] mx-2 flex flex-col justify-between p-5">
-  <div>
+  <div class="text-[1.05rem]">
     <h3 class="text-center text-4xl font-bold">FJ</h3>
     <br />
 
@@ -38,7 +38,7 @@
   </div>
   <div class="flex justify-between items-end">
     <div>
-      <p>Tecnologías utilizadas:</p>
+      <p><b>Tecnologías utilizadas:</b></p>
       <div class="flex gap-4 iconos">
         <img
           src="https://cdn.simpleicons.org/angular/DD0031"
@@ -70,7 +70,6 @@
         target="_blank"
         aria-label="GitHub Repositorio FJ"
         class="group inline-flex items-center justify-center w-12 h-12 rounded-full bg-oscuro hover:bg-carta transition duration-300 hover:scale-110"
-        title="GitHub Repositorio FJ"
       >
         <svg
           viewBox="0 0 24 24"
@@ -81,13 +80,21 @@
             d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757-1.089-.745.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.775.418-1.305.76-1.605-2.665-.3-5.466-1.335-5.466-5.93 0-1.31.47-2.38 1.236-3.22-.123-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.301 1.23a11.5 11.5 0 0 1 3.003-.404c1.02.005 2.045.138 3.003.404 2.291-1.553 3.297-1.23 3.297-1.23.653 1.653.241 2.873.118 3.176.77.84 1.234 1.91 1.234 3.22 0 4.61-2.807 5.625-5.479 5.921.43.371.823 1.102.823 2.222 0 1.604-.015 2.896-.015 3.293 0 .321.216.694.825.576C20.565 22.092 24 17.592 24 12.297 24 5.67 18.627.297 12 .297z"
           />
         </svg>
+        <span
+          class="absolute -top-13 mr-1 scale-0 group-hover:scale-100 origin-bottom bg-oscuro text-claro text-sm px-3 py-1 rounded-lg transition-transform duration-100 text-center"
+        >
+          Repositorio FJ
+        </span>
       </a>
     </div>
   </div>
 </div>
 
+<!-- Separador -->
+<div class="border-b-3 sm:border-l-3 sm:border-b-3 border-oscuro"></div>
+
 <!-- Imagen app -->
-<div class="flex-1 content-center border-l-3 border-oscuro p-5 bg-carta">
+<div class="flex-1 content-center p-5 bg-carta">
   <img
     src="images/proyectos/fj-logo.svg"
     alt="fj-logo"
@@ -109,7 +116,7 @@
 @if (proyecto == 'informula') {
 <!-- Texto -->
 <div class="flex-[1.5] mx-2 flex flex-col justify-between p-5">
-  <div>
+  <div class="text-[1.05rem]">
     <h3 class="text-center text-4xl font-bold">Informula</h3>
     <br />
 
@@ -130,10 +137,11 @@
         <strong>DaisyUI</strong>.
       </li>
     </ul>
+    <br />
   </div>
   <div class="flex justify-between items-end">
     <div>
-      <p>Tecnologías utilizadas:</p>
+      <p><b>Tecnologías utilizadas:</b></p>
       <div class="flex gap-4 iconos">
         <img
           src="https://cdn.simpleicons.org/angular/DD0031"
@@ -183,13 +191,21 @@
             d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757-1.089-.745.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.775.418-1.305.76-1.605-2.665-.3-5.466-1.335-5.466-5.93 0-1.31.47-2.38 1.236-3.22-.123-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.301 1.23a11.5 11.5 0 0 1 3.003-.404c1.02.005 2.045.138 3.003.404 2.291-1.553 3.297-1.23 3.297-1.23.653 1.653.241 2.873.118 3.176.77.84 1.234 1.91 1.234 3.22 0 4.61-2.807 5.625-5.479 5.921.43.371.823 1.102.823 2.222 0 1.604-.015 2.896-.015 3.293 0 .321.216.694.825.576C20.565 22.092 24 17.592 24 12.297 24 5.67 18.627.297 12 .297z"
           />
         </svg>
+        <span
+          class="absolute -top-13 mr-1 scale-0 group-hover:scale-100 origin-bottom bg-oscuro text-claro text-sm px-3 py-1 rounded-lg transition-transform duration-100 text-center"
+        >
+          Repositorio InFormula
+        </span>
       </a>
     </div>
   </div>
 </div>
 
+<!-- Separador -->
+<div class="border-b-3 sm:border-l-3 sm:border-b-3 border-oscuro"></div>
+
 <!-- Imagen app -->
-<div class="flex-1 content-center border-l-3 border-oscuro p-5 bg-carta">
+<div class="flex-1 content-center p-5 bg-carta">
   <img
     src="images/proyectos/informula-logo.svg"
     alt="informula-logo"
@@ -212,7 +228,7 @@
 @if (proyecto == 'gesclub') {
 <!-- Texto -->
 <div class="flex-[1.5] mx-2 flex flex-col justify-between p-5">
-  <div>
+  <div class="text-[1.05rem]">
     <h3 class="text-center text-4xl font-bold">Gesclub</h3>
     <br />
 
@@ -234,10 +250,11 @@
         <strong>DaisyUI</strong>.
       </li>
     </ul>
+    <br />
   </div>
   <div class="flex justify-between items-end">
     <div>
-      <p>Tecnologías utilizadas:</p>
+      <p><b>Tecnologías utilizadas:</b></p>
       <div class="flex gap-4 iconos">
         <img
           src="https://cdn.simpleicons.org/angular/DD0031"
@@ -287,13 +304,21 @@
             d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757-1.089-.745.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.775.418-1.305.76-1.605-2.665-.3-5.466-1.335-5.466-5.93 0-1.31.47-2.38 1.236-3.22-.123-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.301 1.23a11.5 11.5 0 0 1 3.003-.404c1.02.005 2.045.138 3.003.404 2.291-1.553 3.297-1.23 3.297-1.23.653 1.653.241 2.873.118 3.176.77.84 1.234 1.91 1.234 3.22 0 4.61-2.807 5.625-5.479 5.921.43.371.823 1.102.823 2.222 0 1.604-.015 2.896-.015 3.293 0 .321.216.694.825.576C20.565 22.092 24 17.592 24 12.297 24 5.67 18.627.297 12 .297z"
           />
         </svg>
+        <span
+          class="absolute -top-13 mr-1 scale-0 group-hover:scale-100 origin-bottom bg-oscuro text-claro text-sm px-3 py-1 rounded-lg transition-transform duration-100 text-center"
+        >
+          Repositorio Gesclub
+        </span>
       </a>
     </div>
   </div>
 </div>
 
+<!-- Separador -->
+<div class="border-b-3 sm:border-l-3 sm:border-b-3 border-oscuro"></div>
+
 <!-- Imagen app -->
-<div class="flex-1 content-center border-l-3 border-oscuro p-5 bg-carta">
+<div class="flex-1 content-center p-5 bg-carta">
   <img
     src="images/proyectos/gesclub-logo.svg"
     alt="gesclub-logo"
