--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <app-header />
-<div class="relative fondo">
+<div class="fondo">
   <!-- Nubes -->
-  <app-header-nubes />
-  <app-experiencia />
-  <app-proyectos />
-  <img src="images/fondoSuelo.svg" alt="suelo" />
-</div>
+  <app-nubes class="relative" />
 
-<app-footer />
+  <app-footer />
+</div>
