--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -89,8 +89,8 @@
 
     <!-- CV -->
     <a
-      href="/cv/Adrián%20Ferradás%20Gutiérrez%20CV.pdf"
-      download="Adrián Ferradás Gutiérrez CV.pdf"
+      href="cv/AdrianFerradasGutierrezCV.pdf"
+      download="Adrian Ferradas Gutierrez CV.pdf"
       aria-label="Descargar Curriculum"
       class="group relative w-14 h-14 flex items-center justify-center rounded-full bg-claro hover:bg-green-500 transition-colors duration-300"
     >
