--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,19 +1,10 @@
 .footer-bg {
   width: 100%;
-  height: 200px; /* Ajusta la altura a tu gusto */
-  background-image: url("/images/fondoSuelo.svg"); /* tu imagen */
+  height: 200px;
+  background-image: url("../../../../public/images/fondoSuelo.svg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: top center; /* mantiene la parte superior */
+  background-position: top center;
   display: flex;
   align-items: center;
-  justify-content: center;
-  color: white; /* color del texto */
-  text-align: center;
-}
-
-.footer-content {
-  background-color: rgba(0, 0, 0, 0.4); /* opcional, para mejorar contraste */
-  padding: 20px;
-  border-radius: 10px;
 }
